src/app/views/tab-view/tab-view.component.scss
#container {
    height: 100vh;

    #left-column {
        position: relative;
        z-index: 1;

        .logo {
            width: 32px;
            height: 32px;
            background-image: url("/assets/logo.png");
        }
    }
    
    #tabs {
        position: relative;
        height: 100vh;
        flex: 1;
    
        .tab {
            position: absolute; 
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
    
            &:not(.selected) {
                opacity: 0;
                pointer-events: none;
            }
        }
    }    
}


// responsive
// ----------------------------------------------

// small screens
@media only screen and (max-width: 700px) {
    #container {
        flex-direction: column-reverse;

        #left-column {

            .logo { display: none; }

            app-fab {
                transform: translateY(-100%);
                position: absolute;
                top: calc(0px - var(--spacing));
                right: calc(0px + var(--spacing));
            }
        }

        #tabs {
            height: initial;
            width: 100vw;
        }
    }
}

// large screens
@media only screen and (min-width: 1200px) { }

